# tiny_colls

./: CMakeLists.txt  LICENSE.txt  README.md
examples/: CMakeLists.txt  demo.cc  example.cc
include/: tiny_colls.h
include/tiny_colls/: aabb.h  collider.h  collision.h  point.h
include/tiny_colls/details/: collider_impl.h  proj.h  vec.h
src/: tiny_colls.cc
tests/: CMakeLists.txt  tests.cc
